# AGRI-SENSE_GUARDIAN

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_RATIONALE.md  Dockerfile  FEATURE_REQUEST.md  HealthCheck.py  KAGGLE_SUBMISSION_WRITEUP.md  LICENSE  Main.py  README.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  Requirements.txt  SETUP_GUIDE.md  VIDEO_SCRIPT.md  __init__.py  pyproject.toml
Agents/: AgentExecutor.py  ForecastAgent.py  ForecastAgentServer.py  OrchestratorAgent.py  OrchestratorServer.py  PlannerAgent.py  VerifyAgent.py  VerifyAgentServer.py  __init__.py
Config/: Settings.py  __init__.py
Docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_RATIONALE.md  FEATURE_REQUEST.md  INDEX.md  INNOVATION_HIGHLIGHTS.md  JUDGE_EVALUATION_GUIDE.md  SOCIAL_IMPACT_ASSESSMENT.md  TECHNICAL_DEEP_DIVE.md  WEB_UI_ARCHITECTURE.md
Services/: AgentBootstrap.py  HealthService.py  TaskManager.py  __init__.py
Setup/: SETUP_GUIDE.md  Setup-Copernicus.ps1
Static/Css/: Styles.css
Static/Js/: App.js
Templates/: index.html
Tools/: CodeExecutionTool.py  CopernicusTool.py  EmailNotificationTool.py  GoogleSearchTool.py  SatelliteFetchTool.py  SatelliteTool.py  SoilTestTool.py  WeatherTool.py  __init__.py
Utils/: Logger.py  Observability.py  SessionManager.py  __init__.py
